[gd_scene load_steps=2 format=3 uid="uid://bueem1cthmctk"]

[ext_resource type="Script" path="res://creatures/clickable.gd" id="1_1uv2q"]

[node name="ClickableComponent" type="Area2D"]
collision_layer = 4
collision_mask = 0
priority = 1
script = ExtResource("1_1uv2q")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
